<resources>
    <string name="app_name">Calculator</string>
    <string name="idk">IDK</string>
    <string name="todo">TODO</string>
    <string name="Num0">0</string>
    <string name="dot">,</string>
    <string name="Num3">3</string>
    <string name="Num2">2</string>
    <string name="Num1">1</string>
    <string name="equal">=</string>
    <string name="plus">+</string>
    <string name="Num7">7</string>
    <string name="Num8">8</string>
    <string name="x">x</string>
    <string name="Num9">9</string>
    <string name="minus">-</string>
    <string name="Num6">6</string>
    <string name="Num4">4</string>
    <string name="Num5">5</string>
    <string name="percent">( )</string>
    <string name="Back">⌫</string>
    <string name="ac">AC</string>
    <string name="div">÷</string>
    <string name="backgr"></string>
    <string name="mainStr"></string>
    <string name="numback">8888888888</string>
    <string name="textview">TextView</string>
    <string name="tempo"></string>
</resources>